--- a/frontend/src/app/dashboard/page/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/page/dashboard/dashboard.component.html
@@ -1,304 +1,25 @@
 <app-header></app-header>
 <div class="page overflow-hidden">
   <div class="d-flex flex-column w-100">
-    <ul class="nav nav-tabs">
+    <ul class="nav overflow-scroll flex-nowrap py-2">
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/admin/users">Usuarios</a>
+        <a class="nav-link text-secondary d-flex gap-1 align-items-center" routerLinkActive="active-admin-link"
+          routerLink="/admin" [routerLinkActiveOptions]="{ exact: true }">Inicio <i class="fa-solid fa-house"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/admin/products">Productos</a>
+        <a class="nav-link text-secondary d-flex gap-1 align-items-center" routerLinkActive="active-admin-link"
+          routerLink="/admin/users">Usuarios <i class="fa-solid fa-users"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLinkActive="active" routerLink="/admin/categories">Categorias</a>
+        <a class="nav-link text-secondary d-flex gap-1 align-items-center" routerLinkActive="active-admin-link"
+          routerLink="/admin/products">Productos
+          <i class="fa-solid fa-mug-hot"></i></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-secondary d-flex gap-1 align-items-center" routerLinkActive="active-admin-link"
+          routerLink="/admin/categories">Categorias <i class="fa-solid fa-tags"></i></a>
       </li>
     </ul>
     <router-outlet></router-outlet>
   </div>
-  <!-- <main class="container py-5">
-    <div class="overflow-scroll">
-      <div class="d-flex gap-4 mb-3 ">
-        <h2>Usuarios</h2>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalUsuario">
-          Agregar nuevo usuario
-        </button>
-      </div>
-      <table class=" mt-4 table table-responsive table-striped">
-        <thead>
-          <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Email</th>
-            <th>Password</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>john@example.com</td>
-            <td>dhuisyd871#hash914yh</td>
-            <td class="d-flex gap-2">
-              <button class="btn btn-danger">Delete</button>
-              <button class="btn btn-primary">Update</button>
-            </td>
-          </tr>
-          <tr>
-            <td>Smith</td>
-            <td>Thomas</td>
-            <td>smith@example.com</td>
-            <td>dopksyd871#hash914yh</td>
-            <td class="d-flex gap-2">
-              <button class="btn btn-danger">Delete</button>
-              <button class="btn btn-primary">Update</button>
-            </td>
-          </tr>
-          <tr>
-            <td>Merry</td>
-            <td>Jim</td>
-            <td>merry@example.com</td>
-            <td>dhassyd871#hash914yh</td>
-            <td class="d-flex gap-2">
-              <button class="btn btn-danger">Delete</button>
-              <button class="btn btn-primary">Update</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-
-      <hr>
-
-      <div class="d-flex gap-4 mb-3 ">
-        <h2>Categorias</h2>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalCategoria">
-          Agregar Categoria
-        </button>
-      </div>
-      <table class="table table-responsive table-striped">
-        <thead>
-          <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th class="d-inline-block" style="width: 300px;">Description</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>Bebidas friass</td>
-            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ab consectetur consequuntur animi.
-            </td>
-            <td class="d-flex gap-2">
-              <button class="btn btn-danger">Delete</button>
-              <button class="btn btn-primary">Update</button>
-            </td>
-          </tr>
-          <tr>
-            <td>1</td>
-            <td>Bebidas calientes</td>
-            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ab consectetur consequuntur animi.
-            </td>
-            <td class="d-flex gap-2">
-              <button class="btn btn-danger">Delete</button>
-              <button class="btn btn-primary">Update</button>
-            </td>
-          </tr>
-          <tr>
-            <td>1</td>
-            <td>postres</td>
-            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ab consectetur consequuntur animi.
-            </td>
-            <td class="d-flex gap-2">
-              <button class="btn btn-danger">Delete</button>
-              <button class="btn btn-primary">Update</button>
-            </td>
-          </tr>
-
-        </tbody>
-      </table>
-
-      <hr>
-
-      <div class="d-flex gap-4 mb-3 ">
-        <h2>Productos</h2>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modalProducto">
-          Agregar producto
-        </button>
-      </div>
-      <table class="table table-responsive table-striped">
-        <thead>
-          <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th class="d-inline-block" style="width: 300px;">Description</th>
-            <th>Price</th>
-            <th>Stock</th>
-            <th>Category</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>Cappuccino</td>
-            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ab consectetur consequuntur animi.
-            </td>
-            <td>450</td>
-            <td>600</td>
-            <td>bebida</td>
-            <td class="d-flex gap-2">
-              <button class="btn btn-danger">Delete</button>
-              <button class="btn btn-primary">Update</button>
-            </td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Americano</td>
-            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ab consectetur consequuntur animi.
-            </td>
-            <td>350</td>
-            <td>500</td>
-            <td>bebida</td>
-            <td class="d-flex gap-2">
-              <button class="btn btn-danger">Delete</button>
-              <button class="btn btn-primary">Update</button>
-            </td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Chocotorta</td>
-            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ab consectetur
-              consequuntur animi.
-            </td>
-            <td>400</td>
-            <td>10</td>
-            <td>comida</td>
-            <td class="d-flex gap-2">
-              <button class="btn btn-danger">Delete</button>
-              <button class="btn btn-primary">Update</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </main> -->
-
-
-
-
-  <!-- Modal usuarios -->
-  <!-- <div class="modal fade" id="modalUsuario" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Agregar usuario</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-
-          <form>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Nombre</label>
-              <input type="text" class="form-control" id="nombreUsuario" placeholder="Ingrese su nombre">
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Apellido</label>
-              <input type="text" class="form-control" id="apellidoUsuario" placeholder="Ingrese su apellido">
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Dirección Email</label>
-              <input type="email" class="form-control" id="emailUsuario" placeholder="usuario@example.com">
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-              <input type="password" class="form-control" id="passwordUsuario" placeholder="ingrese una contraseña">
-            </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Administrador</label>
-            </div>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-primary">Agregar usuario</button>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
-  <!-- Modal productos -->
-  <!-- <div class="modal fade" id="modalProducto" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Agregar Productos</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <form>
-
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Nombre de producto</label>
-              <input type="text" class="form-control" id="product-name">
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Descripción</label>
-              <input type="text" class="form-control" id="product-descripcion">
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Precio</label>
-              <input type="number" class="form-control" id="product-precio">
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Stock</label>
-              <input type="number" class="form-control" id="product-stock">
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Categoria</label>
-              <select class="form-select" aria-label="Default select example">
-                <option selected>Seleccione una categoria</option>
-                <option value="1">bebida fria</option>
-                <option value="2">bebida caliente</option>
-                <option value="3">postres</option>
-              </select>
-            </div>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-primary">Agregar Producto</button>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
-  <!-- Modal Categorias -->
-  <!-- <div class="modal fade" id="modalCategoria" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Agregar Categoria</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <form>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Nombre de Categoria</label>
-              <input type="text" class="form-control" id="product-name">
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Descripción</label>
-              <input type="text" class="form-control" id="product-descripcion">
-            </div>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-          <button type="button" class="btn btn-primary">Agregar Categoria</button>
-        </div>
-      </div>
-    </div>
-  </div> -->
 </div>
