--- a/frontend/src/app/products/pages/products/products.component.html
+++ b/frontend/src/app/products/pages/products/products.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="page">
   <div>
-    <div class="" *ngFor="let product of products">
+    <div *ngFor="let product of products">
       <div>
         <img [src]="product.img" alt="">
         <h2>nombre: {{ product.name }}</h2>
